src/test/deca/context/valid/provided/mult_float_int.deca
/*/ Description:
//    Programme faisant correctement l'opération de multiplication entre un entier et un flottant
//
// Resultats: 12
//
//
// Historique:
//    cree le 01/01/2022*/

{
        float x = 3;
	int y = 4;
	float z = x*y;
	println(z);
}
