src/test/deca/context/invalid/provided/fonction_sans_nom.deca
// Description:
//    Programme qui utilise une fonction sans nom.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022

{
        void (int x, int y){
        	return x-y;
        }

}
